# graphkit

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: create_planner_task.py  send_email_draft.py
graphkit/: __init__.py  auth.py  client.py
tests/: test_auth.py
